shellscript/kind/linkerd-steamtalk/02-whois-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whois-svc 
spec:
  type: ClusterIP
  selector:
    app: whois
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
